bitwarden-statefulset.yml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: bitwarden
  labels:
    name: bitwarden
spec:
  serviceName: bitwarden
  replicas: 1
  selector:
    matchLabels:
      app: bitwarden
  updateStrategy:
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: bitwarden
    spec:
      serviceAccountName: bitwarden
      containers:
        - name: bitwarden
          image: vaultwarden/server:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
              name: http
              protocol: TCP
            - containerPort: 3012
              name: websocket
              protocol: TCP
          resources:
            limits:
              cpu: 300m
              memory: 1Gi
            requests:
              cpu: 50m
              memory: 256Mi
          volumeMounts:
            - mountPath: /data
              name: bitwarden-data
              readOnly: false
      volumes:
        - name: bitwarden-data
          persistentVolumeClaim:
            claimName: bitwarden-data-claim
