bitwarden-service.yml
apiVersion: v1
kind: Service
metadata:
  name: bitwarden
spec:
  selector:
    app: bitwarden
  ports:
    - name: bitwarden-http
      port: 80
      protocol: TCP
      targetPort: 8080
    - name: websocket
      protocol: TCP
      port: 3012
      targetPort: 3012
